Avoid vertical scrollbars.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -5,7 +5,6 @@ html {
 
 body {
   transition: all 0.5s ease;
-  height: 100%;
   font-family: helvetica, arial, sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
